# castaway

./: .gitignore  Cargo.toml  Dockerfile  PROJECT.md  README.md  build.rs  cbindgen.toml  docker-compose.yml  gen-certs.sh
protos/: raft.proto
python/: castaway.py  castaway_cffi.py
src/: ffi.rs  lib.rs  main.rs  raft.rs  utils.rs
src/protos/: mod.rs  raft.rs  raft_grpc.rs
tests/: raft.rs
